[gd_scene load_steps=8 format=3 uid="uid://bffnxxwlpiv0m"]

[ext_resource type="Script" uid="uid://cifeonbdwgiah" path="res://rainbow_recipe.gd" id="1_t0m4v"]
[ext_resource type="PackedScene" uid="uid://d281lsqavd45o" path="res://item_sprite.tscn" id="2_oxyal"]
[ext_resource type="Texture2D" uid="uid://ctn52h7ljwwp5" path="res://arrow.png" id="3_j1bvx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p6tcl"]
bg_color = Color(0.60192096, 0.5099987, 0.30167386, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_43k02"]
bg_color = Color(0.6108047, 0.5973683, 0.58841664, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k52ho"]
bg_color = Color(0.3445084, 0.3499424, 0.34183627, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_43k02"]
size = Vector2(189.33333, 88)

[node name="Recipe" type="Node2D"]
position = Vector2(23, -140)
scale = Vector2(1.5, 1.5)
script = ExtResource("1_t0m4v")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -106.666664
offset_top = -80.0
offset_right = 126.666664
offset_bottom = 30.0
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.769697
offset_right = -47.33333
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_p6tcl")
metadata/_edit_use_anchors_ = true

[node name="Ingredient1" parent="Control" instance=ExtResource("2_oxyal")]
position = Vector2(19.33333, 25.333336)
scale = Vector2(3, 3)

[node name="Ingredient2" parent="Control" instance=ExtResource("2_oxyal")]
position = Vector2(41.96333, 25.333336)
scale = Vector2(3, 3)

[node name="Ingredient3" parent="Control" instance=ExtResource("2_oxyal")]
position = Vector2(64.96333, 25.333336)
scale = Vector2(3, 3)

[node name="Ingredient4" parent="Control" instance=ExtResource("2_oxyal")]
position = Vector2(19.33333, 52)
scale = Vector2(3, 3)

[node name="Ingredient5" parent="Control" instance=ExtResource("2_oxyal")]
position = Vector2(41.96333, 52)
scale = Vector2(3, 3)

[node name="Ingredient6" parent="Control" instance=ExtResource("2_oxyal")]
position = Vector2(64.96333, 52)
scale = Vector2(3, 3)

[node name="Arrow" type="Sprite2D" parent="Control"]
position = Vector2(106.66668, 40)
scale = Vector2(3, 3)
texture = ExtResource("3_j1bvx")

[node name="Result" parent="Control" instance=ExtResource("2_oxyal")]
position = Vector2(153.33334, 40)
scale = Vector2(4.8333335, 4.8333335)

[node name="ProgressBar" type="ProgressBar" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.008571429
anchor_top = -0.15757579
anchor_right = -0.008571429
anchor_bottom = -0.15757579
offset_left = 6.666664
offset_top = 86.666664
offset_right = 185.33334
offset_bottom = 98.33333
theme_override_styles/background = SubResource("StyleBoxFlat_43k02")
theme_override_styles/fill = SubResource("StyleBoxFlat_k52ho")
step = 0.001
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 255
collision_mask = 255

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-13.333339, -38.666664)
shape = SubResource("RectangleShape2D_43k02")
